# podium

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  debug_default_config.json
.github/: dependabot.yml
.github/workflows/: crates.io-publish.yml  publish-release.yml  rust.yml
benches/: my_benchmark.rs
client/: .eslintrc.json  README.md  package-lock.json  package.json
client/src/api/: client.ts
client/src/contracts/: PodiumSearchResult.tsx  SearchResult.tsx
client/src/main/: main.ts
client/src/renderer/: app.css  app.tsx
client/src/renderer/actions/: searchInputAction.ts
client/src/renderer/components/: Application.tsx  SearchInput.scss  SearchInput.tsx  SearchResults.tsx  SearchResultsRow.scss  SearchResultsRow.tsx  SettingsButton.scss  SettingsButton.tsx
client/src/renderer/containers/: SearchInputContainer.ts
client/src/renderer/reducers/: index.ts  searchInputReducer.ts
client/src/renderer/store/: index.ts
client/src/utils/: string-utils.ts
src/: bin.rs  config.rs  error_adapter.rs  file_watcher.rs  lib.rs  main.rs  path_facet_convert.rs  query_executor.rs  searcher.rs  tantivy_api.rs  tantivy_process.rs  tantivy_wrapper.rs
src/common/: Cargo.toml
src/common/src/: error_adapter.rs  lib.rs
src/contracts/: AppState.rs  Cargo.toml  app_state.rs  file_to_process.rs  mod.rs
src/contracts/src/: file_to_process.rs  indexer.rs  lib.rs
src/custom_tantivy/: Cargo.toml  mod.rs  utils.rs  wrapper.rs
src/custom_tantivy/src/: path_facet_convert.rs  utils.rs  wrapper.rs
src/indexers/: Cargo.toml  csv_indexer.rs  docx_indexer.rs  exif_indexer.rs  mobile_net_v2_indexer.rs  mod.rs  pdf_indexer.rs  pptx_indexer.rs  spreadsheet_indexer.rs  text_indexer.rs
src/indexers/csv/: Cargo.toml
src/indexers/csv/benches/: csv_benchmark.rs
src/indexers/csv/src/: csv_indexer.rs  lib.rs
src/indexers/docx/: Cargo.toml
src/indexers/docx/src/: docx_indexer.rs  lib.rs
src/indexers/exif/: Cargo.toml
src/indexers/exif/benches/: exif_benchmark.rs
src/indexers/exif/src/: exif_indexer.rs  lib.rs
src/indexers/mobile_net_v2/: Cargo.toml
src/indexers/mobile_net_v2/benches/: mobile_net_v2_benchmark.rs
src/indexers/mobile_net_v2/src/: lib.rs  mobile_net_v2_indexer.rs
src/indexers/pdf/: Cargo.toml
src/indexers/pdf/benches/: pdf_benchmark.rs
src/indexers/pdf/src/: lib.rs  pdf_indexer.rs
src/indexers/pptx/: Cargo.toml
src/indexers/pptx/benches/: pptx_benchmark.rs
src/indexers/pptx/src/: lib.rs  pptx_indexer.rs
src/indexers/spreadsheet/: Cargo.toml
src/indexers/spreadsheet/benches/: spreadsheet_benchmark.rs
src/indexers/spreadsheet/src/: lib.rs  spreadsheet_indexer.rs
src/indexers/src/: lib.rs
src/indexers/text/: Cargo.toml
src/indexers/text/benches/: text_benchmark.rs
src/indexers/text/src/: lib.rs  text_indexer.rs
src/routes/: mod.rs  search.rs
src/ui/: app.js  index.html  main_window.rs  mod.rs  styles.css
src/ui/support/: mod.rs
test_files/: Cats.docx  Cats.pptx  Cats.xlsx  data.csv  file.txt  test.txt  yugioh.txt
