[package]
name = "podium"
version = "0.0.3"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
tantivy = "0.11.3"
walkdir = "2"
app_dirs = "^1.2.1"
notify = "4.0.0"
config = "0.10.1"
simple_logger = "1.5.0"
log = "0.4.6"
blake2b_simd = "0.5.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"
kamadak-exif = "0.3"
reverse_geocoder = "1.0.1"
pdf-extract = "0.4.6"
regex = "1"
image = "0.23.3"
docx = "0.1.2"
msoffice_pptx = "0.2.1"
msoffice_shared = "0.1.1"
csv = "1"
calamine = "0.15.4"
opener = "0.4.0"
actix-web = "2"
actix-rt = "1"
futures = "0.3.1"
crossbeam = "0.7.3"
actix-cors = "0.2.0"
once_cell = "1.3.1"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.35"
clap = "2.33.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.3"
tracing-flame = "0.1.0"
# TODO: once paperclip stabilizes actix open api generator - https://paperclip.waffles.space/actix-plugin.html
# paperclip = { version = "0.3.0", features = ["actix"] }
tract-tensorflow = "0.10.10"
tract-core = "0.10.10"

[dev-dependencies]
criterion = "0.2"

[lib]
name = "podium_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "podium"
path = "src/bin.rs"
bench = false

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
overflow-checks = false
