[package]
name = "podium"
version = "0.0.3"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "src/common",
    "src/contracts",
    "src/custom_tantivy",
    "src/indexers",
    "src/indexers/csv",
    "src/indexers/docx",
    "src/indexers/exif",
    "src/indexers/mobile_net_v2",
    "src/indexers/pdf",
    "src/indexers/pptx",
    "src/indexers/spreadsheet",
    "src/indexers/text",
]

[dependencies]
contracts = { path = "src/contracts" }
custom_tantivy = { path = "src/custom_tantivy" }
indexers = { path = "src/indexers" }
common = { path = "src/common" }
walkdir = "2"
app_dirs = "1"
notify = "4"
config = "0.10"
simple_logger = "1.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
opener = "0.4"
actix-web = "3"
actix-rt = "1"
futures = "0.3"
crossbeam = "0.8"
actix-cors = "0.5"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.3"
tracing-flame = "0.1.0"
# TODO: once paperclip stabilizes actix open api generator - https://paperclip.waffles.space/actix-plugin.html
# paperclip = { version = "0.3.0", features = ["actix"] }
failure = "=0.1.7"

[dev-dependencies]
criterion = "0.2"

[lib]
name = "podium_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "podium"
path = "src/bin.rs"
bench = false

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
overflow-checks = false
