[package]
name = "common"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-flame = "0.1"
async-trait = "0.1"
anyhow = "1"
