[package]
name = "indexers"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
csv_indexer = { path = "csv" }
docx_indexer = { path = "docx" }
exif_indexer = { path = "exif" }
mobile_net_v2_indexer = { path = "mobile_net_v2" }
pdf_indexer = { path = "pdf" }
pptx_indexer = { path = "pptx" }
spreadsheet_indexer = { path = "spreadsheet" }
text_indexer = { path = "text" }
contracts = { path = "../contracts" }
common = { path = "../common" }
once_cell = "1.3.1"
tracing = "0.1"
