[package]
name = "exif_indexer"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../../contracts" }
common = { path = "../../common" }
lazy_static = "1"
kamadak-exif = "0.5"
reverse_geocoder = "2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "exif_benchmark"
harness = false
