[package]
name = "mobile_net_v2_indexer"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../../contracts" }
common = { path = "../../common" }
image = "0.23"
tract-tensorflow = "0.12"
tract-core = "0.12"
once_cell = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mobile_net_v2_benchmark"
harness = false
