[package]
name = "pdf_indexer"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../../contracts" }
common = { path = "../../common" }
pdf-extract = "0.6"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pdf_benchmark"
harness = false
