[package]
name = "text_indexer"
version = "0.1.0"
authors = ["Teodor Voinea <voinea.teodor@gmail.com>"]
edition = "2018"

[dependencies]
contracts = { path = "../../contracts" }
common = { path = "../../common" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "text_benchmark"
harness = false
